; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_main.c_optint.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_main.c_optint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @optint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @optint(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca [20 x i8], align 16
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i8* @skynet_getenv(i8* %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = getelementptr inbounds [20 x i8], [20 x i8]* %7, i64 0, i64 0
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i8*, i8** %4, align 8
  %17 = getelementptr inbounds [20 x i8], [20 x i8]* %7, i64 0, i64 0
  %18 = call i32 @skynet_setenv(i8* %16, i8* %17)
  %19 = load i32, i32* %5, align 4
  store i32 %19, i32* %3, align 4
  br label %23

20:                                               ; preds = %2
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @strtol(i8* %21, i32* null, i32 10)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i8* @skynet_getenv(i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @skynet_setenv(i8*, i8*) #1

declare dso_local i32 @strtol(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
